reflectapi-demo/tests/errors/invalid_reflect_on_nested_struct_twice.rs
#[derive(reflectapi::Input)]
struct TestStructWithNested {
    _f: TestStructNested,
    _f2: TestStructNested,
}
struct TestStructNested {
    _f: String,
}

fn main() {}
